--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
-  "name": "Quizr",
+  "name": "auizr",
+  "engines": {
+    "node": "14.17.6"
+  },
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -18,6 +21,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "formidable": "^2.0.1",
+    "heroku": "^7.66.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.3",
     "nodemon": "^2.0.20",
