--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -5,3 +5,4 @@ DB_PASS=alnu3bukKKzFcCBE
 DB_URL= mongodb+srv://quizrAdmin:alnu3bukKKzFcCBE@cluster0.wsakd.mongodb.net/Quiz?retryWrites=true&w=majority
 TOKEN_EXP=7d
 SECRET=abc1214222df
+NODE_ENV=production
