--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,5 +49,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://quizr-razaul.herokuapp.com/"
+  "proxy": "https://quizr-razaul.herokuapp.com"
 }
